--- a/SplitTimer/SplitTimer/Base.lproj/Main.storyboard
+++ b/SplitTimer/SplitTimer/Base.lproj/Main.storyboard
@@ -18,74 +18,74 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vJA-7t-yWv">
-                                <rect key="frame" x="190" y="547" width="34" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Start"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WBU-Hd-oxU">
+                                <rect key="frame" x="276" y="515" width="39" height="30"/>
+                                <state key="normal" title="Reset"/>
                                 <connections>
-                                    <segue destination="neR-os-JKl" kind="presentation" id="2HN-CV-mbF"/>
+                                    <action selector="resetBtnPushed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="v5q-fQ-ZXT"/>
                                 </connections>
                             </button>
-                        </subviews>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
-            </objects>
-        </scene>
-        <!--View Controller-->
-        <scene sceneID="spw-U2-c10">
-            <objects>
-                <viewController id="neR-os-JKl" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="KaD-DA-sgO">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gbe-Qp-6Un">
-                                <rect key="frame" x="0.0" y="144" width="414" height="518"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MdJ-a7-R5w">
+                                <rect key="frame" x="0.0" y="74" width="414" height="341"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XCP-Rv-YVR">
-                                        <rect key="frame" x="186" y="248" width="42" height="21"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <gestureRecognizers/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zTE-RY-mhJ">
+                                        <rect key="frame" x="20" y="20" width="374" height="301"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eDb-BU-hMI">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="341"/>
+                                        <connections>
+                                            <action selector="splitTimeBtnPushed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="2mH-Dl-Ipt"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
-                                <color key="backgroundColor" red="0.30840110780000002" green="0.5618229508" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <gestureRecognizers/>
+                                <color key="backgroundColor" red="0.57919406890000003" green="0.1280144453" blue="0.57268613580000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstItem="zTE-RY-mhJ" firstAttribute="top" secondItem="MdJ-a7-R5w" secondAttribute="top" constant="20" id="4h5-fG-nD8"/>
+                                    <constraint firstAttribute="bottom" secondItem="zTE-RY-mhJ" secondAttribute="bottom" constant="20" id="7R3-lM-qFP"/>
+                                    <constraint firstItem="eDb-BU-hMI" firstAttribute="top" secondItem="MdJ-a7-R5w" secondAttribute="top" id="Bcc-ED-LG7"/>
+                                    <constraint firstAttribute="bottom" secondItem="eDb-BU-hMI" secondAttribute="bottom" id="FcY-xH-9LO"/>
+                                    <constraint firstAttribute="trailing" secondItem="eDb-BU-hMI" secondAttribute="trailing" id="QTA-gv-R6t"/>
+                                    <constraint firstItem="eDb-BU-hMI" firstAttribute="leading" secondItem="MdJ-a7-R5w" secondAttribute="leading" id="YUx-8G-9YF"/>
+                                    <constraint firstAttribute="trailing" secondItem="zTE-RY-mhJ" secondAttribute="trailing" constant="20" id="arI-Ka-LPa"/>
+                                    <constraint firstItem="zTE-RY-mhJ" firstAttribute="leading" secondItem="MdJ-a7-R5w" secondAttribute="leading" constant="20" id="c0t-zd-4Qw"/>
+                                </constraints>
                             </view>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xfk-4k-Auk">
-                                <rect key="frame" x="97" y="748" width="32" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Stop"/>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="n2D-ol-6zF">
-                                <rect key="frame" x="261" y="748" width="39" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Reset"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vJA-7t-yWv">
+                                <rect key="frame" x="101" y="515" width="34" height="30"/>
+                                <state key="normal" title="Start"/>
+                                <connections>
+                                    <action selector="startBtnPushed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="TJU-4V-MpK"/>
+                                </connections>
                             </button>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <gestureRecognizers/>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="vnu-p0-bvn" firstAttribute="bottom" secondItem="gbe-Qp-6Un" secondAttribute="bottom" constant="200" id="RMm-Ft-aus"/>
-                            <constraint firstItem="vnu-p0-bvn" firstAttribute="trailing" secondItem="gbe-Qp-6Un" secondAttribute="trailing" id="im8-jC-ioV"/>
-                            <constraint firstItem="gbe-Qp-6Un" firstAttribute="top" secondItem="vnu-p0-bvn" secondAttribute="top" constant="100" id="kL7-c9-mAL"/>
-                            <constraint firstItem="gbe-Qp-6Un" firstAttribute="leading" secondItem="vnu-p0-bvn" secondAttribute="leading" id="mfK-9i-5kr"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="vJA-7t-yWv" secondAttribute="bottom" constant="317" id="Ily-Ir-9nI"/>
+                            <constraint firstItem="MdJ-a7-R5w" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="30" id="UKm-V4-qCx"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="WBU-Hd-oxU" secondAttribute="bottom" constant="317" id="aBf-Zy-ubf"/>
+                            <constraint firstItem="vJA-7t-yWv" firstAttribute="top" secondItem="MdJ-a7-R5w" secondAttribute="bottom" constant="100" id="fzT-Pi-gSm"/>
+                            <constraint firstItem="MdJ-a7-R5w" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="hQH-i1-M0v"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="MdJ-a7-R5w" secondAttribute="bottom" constant="447" id="nLz-zJ-Zoa"/>
+                            <constraint firstItem="vJA-7t-yWv" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="101" id="qln-Br-AHb"/>
+                            <constraint firstItem="MdJ-a7-R5w" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="sTQ-2a-N05"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="WBU-Hd-oxU" secondAttribute="trailing" constant="99" id="uDj-J6-iZT"/>
+                            <constraint firstItem="WBU-Hd-oxU" firstAttribute="top" secondItem="MdJ-a7-R5w" secondAttribute="bottom" constant="100" id="usL-rE-VuM"/>
                         </constraints>
-                        <viewLayoutGuide key="safeArea" id="vnu-p0-bvn"/>
-                        <connections>
-                            <outletCollection property="gestureRecognizers" destination="PEc-ZV-7x2" appends="YES" id="GOw-KO-kFo"/>
-                        </connections>
+                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="resetButton" destination="WBU-Hd-oxU" id="nC1-yL-Vsu"/>
+                        <outlet property="splitTimeButton" destination="eDb-BU-hMI" id="SL3-8n-icK"/>
+                        <outlet property="startButton" destination="vJA-7t-yWv" id="cCh-Ri-fhG"/>
+                        <outlet property="timerLabel" destination="zTE-RY-mhJ" id="HSn-as-xII"/>
+                    </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="RDI-Eo-gA7" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <tapGestureRecognizer id="PEc-ZV-7x2"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="868" y="130"/>
+            <point key="canvasLocation" x="47.826086956521742" y="20.758928571428569"/>
         </scene>
     </scenes>
 </document>
