--- a/SplitTimer/SplitTimer/Base.lproj/Main.storyboard
+++ b/SplitTimer/SplitTimer/Base.lproj/Main.storyboard
@@ -18,13 +18,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WBU-Hd-oxU">
-                                <rect key="frame" x="276" y="515" width="39" height="30"/>
-                                <state key="normal" title="Reset"/>
-                                <connections>
-                                    <action selector="resetBtnPushed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="v5q-fQ-ZXT"/>
-                                </connections>
-                            </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MdJ-a7-R5w">
                                 <rect key="frame" x="0.0" y="74" width="414" height="341"/>
                                 <subviews>
@@ -60,16 +53,30 @@
                                     <action selector="startBtnPushed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="TJU-4V-MpK"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WBU-Hd-oxU">
+                                <rect key="frame" x="276" y="515" width="39" height="30"/>
+                                <state key="normal" title="Reset"/>
+                                <connections>
+                                    <action selector="resetBtnPushed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="v5q-fQ-ZXT"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Nxg-9d-zeR">
+                                <rect key="frame" x="184" y="560" width="46" height="30"/>
+                                <state key="normal" title="Stop"/>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="vJA-7t-yWv" secondAttribute="bottom" constant="317" id="Ily-Ir-9nI"/>
                             <constraint firstItem="MdJ-a7-R5w" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="30" id="UKm-V4-qCx"/>
+                            <constraint firstItem="Nxg-9d-zeR" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="184" id="Xr3-uO-ZhJ"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="WBU-Hd-oxU" secondAttribute="bottom" constant="317" id="aBf-Zy-ubf"/>
                             <constraint firstItem="vJA-7t-yWv" firstAttribute="top" secondItem="MdJ-a7-R5w" secondAttribute="bottom" constant="100" id="fzT-Pi-gSm"/>
                             <constraint firstItem="MdJ-a7-R5w" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="hQH-i1-M0v"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="MdJ-a7-R5w" secondAttribute="bottom" constant="447" id="nLz-zJ-Zoa"/>
+                            <constraint firstItem="Nxg-9d-zeR" firstAttribute="top" secondItem="eDb-BU-hMI" secondAttribute="bottom" constant="145" id="oq5-06-J07"/>
                             <constraint firstItem="vJA-7t-yWv" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="101" id="qln-Br-AHb"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Nxg-9d-zeR" secondAttribute="trailing" constant="184" id="rmv-VW-OJP"/>
                             <constraint firstItem="MdJ-a7-R5w" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="sTQ-2a-N05"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="WBU-Hd-oxU" secondAttribute="trailing" constant="99" id="uDj-J6-iZT"/>
                             <constraint firstItem="WBU-Hd-oxU" firstAttribute="top" secondItem="MdJ-a7-R5w" secondAttribute="bottom" constant="100" id="usL-rE-VuM"/>
@@ -80,7 +87,7 @@
                         <outlet property="resetButton" destination="WBU-Hd-oxU" id="nC1-yL-Vsu"/>
                         <outlet property="splitTimeButton" destination="eDb-BU-hMI" id="SL3-8n-icK"/>
                         <outlet property="startButton" destination="vJA-7t-yWv" id="cCh-Ri-fhG"/>
-                        <outlet property="timerLabel" destination="zTE-RY-mhJ" id="HSn-as-xII"/>
+                        <outlet property="timerLabel" destination="zTE-RY-mhJ" id="lv3-Qi-UbT"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
