--- a/SplitTimer/SplitTimer/Base.lproj/Main.storyboard
+++ b/SplitTimer/SplitTimer/Base.lproj/Main.storyboard
@@ -63,6 +63,9 @@
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Nxg-9d-zeR">
                                 <rect key="frame" x="184" y="560" width="46" height="30"/>
                                 <state key="normal" title="Stop"/>
+                                <connections>
+                                    <action selector="stopBtnPushed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="oYG-8O-OD1"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -87,6 +90,7 @@
                         <outlet property="resetButton" destination="WBU-Hd-oxU" id="nC1-yL-Vsu"/>
                         <outlet property="splitTimeButton" destination="eDb-BU-hMI" id="SL3-8n-icK"/>
                         <outlet property="startButton" destination="vJA-7t-yWv" id="cCh-Ri-fhG"/>
+                        <outlet property="stopButton" destination="Nxg-9d-zeR" id="8kn-Tj-M2P"/>
                         <outlet property="timerLabel" destination="zTE-RY-mhJ" id="lv3-Qi-UbT"/>
                     </connections>
                 </viewController>
